<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appsAdress">https://play.google.com/store/search?q=pub:Alexis%20Marchand</string>
    <string name="valeurDefaut">0</string>
    <string name="app_name">Converter</string>
    <string name="title_item_list">Converter</string>
    <string name="title_item_detail">Converter</string>
    <string name="error">ERROR</string>
    <string name="infinity">∞</string>
    <string name="titreBoutonSwap">Swap</string>
    <string name="titreBoutonClear">Clear</string>
    <string name="titreBoutonSettings">Settings</string>
    <string name="search">Search</string>
    <string name="titreBoutonSearch">Search units</string>
    <string name="titreBoutonCopy">Copy</string>
    <string name="labelClipboard">Result of the conversion</string>
    <string name="textCopied">The result has been copied</string>
    <string name="titreBoutonPaste">Paste</string>
    <string name="noResult">No results for</string>
    <string name="toastFailure">No internet connection</string>
    <string name="toastDone">Exchange rates successfully updated</string>
    <string name="titleCategoryConversion">Conversion</string>
    <string name="titleCategoryRates">Exchange rates</string>
    <string name="titleCategoryUI">User interface</string>
    <string name="titleCategoryContact">Contact</string>
    <string name="titleneverRound">Always display every digits</string>
    <string name="subtitleneverRound">Never round the result</string>
    <string name="titleSettingsNbrDecimales">Number of digits to display</string>
    <string name="subtitleSettingsNbrDecimalesS">digit</string>
    <string name="subtitleSettingsNbrDecimalesP">digits</string>
    <string name="titleSettingsSwap">Swap button</string>
    <string name="trueSwap">Values and units will be swapped</string>
    <string name="falseSwap">Upper value will remain the same but units will be swapped</string>
    <string name="clearRecent">Clear search history</string>
    <string name="subtitleClearRecent">Clear previous searches from showing in the Search box</string>
    <string name="confirmationClearRecent">Are you sure ?</string>
    <string name="neverRemember">Never remember history</string>
    <string name="subtitleNeverRemember">Never store search history</string>
    <string name="titleSettingsTheme">Theme</string>
    <string name="darkTheme">Dark theme</string>
    <string name="lightTheme">Light theme</string>
    <string name="titleSettingsNav">Navigation mode</string>
    <string name="titleSettingsSync">When to update exchange rates</string>
    <string name="wifi">On wifi</string>
    <string name="data">On data network</string>
    <string name="never">Never</string>
    <string name="titleSettingsAutoUpdate">Auto update</string>
    <string name="subtitleSettingsAutoUpdate">Automatically update exchanges rates at launch</string>
    <string name="myWebsiteText">"Visit developer's website"</string>
    <string name="myWebsiteAdress">http://www.lesitedalexis.webou.net/en</string>
    <string name="emailText">Email developer</string>
    <string name="emailAdress">mailto:a.marchand.dev@gmail.com</string>
    <string name="appsText">More from developer</string>
    <string name="readableWebsiteAdress">www.lesitedalexis.webou.net</string>
    <string name="readableEmailAdress">a.marchand.dev@gmail.com</string>
    <string name="readableAppsAdress">Alexis Marchand</string>
    <string name="categoryTemperature">Temperature</string>
    <string name="categoryLength">Length</string>
    <string name="categorySpeed">Speed</string>
    <string name="categoryBase">Base</string>
    <string name="categoryCurrency">Currency</string>
    <string name="lastUpdated">Last updated :</string>
    <string name="textUpdate">Update</string>
    <string name="categoryMass">Mass</string>
    <string name="categoryTime">Time</string>
    <string name="categoryArea">Area</string>
    <string name="categoryVolume">Volume</string>
    <string name="categoryPressure">Pressure</string>
    <string name="categoryAngle">Angle</string>
    <string name="categoryFuel">Fuel</string>
    <string name="categoryEnergy">Energy</string>
    <string name="categoryTorque">Torque</string>
    <string name="categoryDataSize">Data (size)</string>
    <string name="categoryDataRate">Data (rate)</string>
    <string name="categoryFrequency">Frequency</string>
    <string name="categoryDensity">Density</string>
    <string name="categoryAngularVelocity">Angular velocity</string>
</resources>
